Added homepage content

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,5 +2,24 @@
 {% load static %}
 
 {% block content %}
-    <h1 class="display-4 text-success">It works!</h1>
+    <div class="container h-100 hero-item ">
+        <div class="row h-100 hero-slider-info">
+            <div class="hero-slider-message">
+                <div class="my-auto">
+                    <h2>A Modern Classic</h2>
+                </div>
+                <div>
+                    <h4>
+                        Bringing you the best
+                        <br>
+                        of the past with modern twist
+                    </h4>
+                </div>
+                <div class="my-5">
+                    <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop now</a>
+                </div>
+            </div>
+        </div>
+        <div class="hero-background"></div>
+    </div>
 {% endblock %}
