Initial header and css for home page complete

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,24 +2,24 @@
 {% load static %}
 
 {% block content %}
-    <div class="container h-100 hero-item ">
-        <div class="row h-100 hero-slider-info">
-            <div class="hero-slider-message">
-                <div class="my-auto">
-                    <h2>A Modern Classic</h2>
-                </div>
-                <div>
-                    <h4>
-                        Bringing you the best
-                        <br>
-                        of the past with modern twist
-                    </h4>
-                </div>
+    <div class="container h-100">
+        <div class="row h-100">
+            <div class="col-7 col-md-6 my-auto">
+                <h1 class="display-4 logo-font text-black">
+                    A Modern Classic
+                </h1>
+                <h3 class="bold">
+                    Bringing you the best
+                    <br>
+                    of the past with modern twist
+                </h3>
                 <div class="my-5">
-                    <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop now</a>
+                    <h4>
+                        <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
+                    </h4>
                 </div>
             </div>
         </div>
-        <div class="hero-background"></div>
     </div>
+    
 {% endblock %}
