--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,24 +2,24 @@
 {% load static %}
 
 {% block content %}
-    <div class="container h-100">
-        <div class="row h-100">
-            <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font text-black">
-                    A Modern Classic
-                </h1>
-                <h3 class="bold">
-                    Bringing you the best
-                    <br>
-                    of the past with modern twist
-                </h3>
-                <div class="my-5">
-                    <h4>
-                        <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
-                    </h4>
-                </div>
+<div class="container h-100">
+    <div class="row h-100  d-flex justify-content-center">
+        <div class="col-7 col-md-6 my-auto">
+            <h1 class="display-4 logo-font text-black text-center">
+                A Modern Classic
+            </h1>
+            <h3 class="bold text-center">
+                Bringing you the best
+                <br>
+                of the past with modern twist
+            </h3>
+            <div class="my-auto">
+                <h4 class="text-center">
+                    <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
+                </h4>
             </div>
         </div>
     </div>
-    
+</div>
+
 {% endblock %}
