Fix add top padding to shop now button on index page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -8,12 +8,13 @@
             <h1 class="display-4 logo-font text-black text-center">
                 A Modern Classic
             </h1>
+            <hr>
             <h3 class="bold text-center">
                 Bringing you the best
                 <br>
-                of the past with modern twist
+                of the past with a modern twist
             </h3>
-            <div class="my-auto">
+            <div class="my-auto pt-4">
                 <h4 class="text-center">
                     <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
                 </h4>
