--- a/templates/base.html
+++ b/templates/base.html
@@ -119,6 +119,14 @@
                 </ul>
             </div>
         </div>
+        <div class="row bg-black">
+            <nav class="navbar navbar-expand-lg navbar-light w-100">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
+                    aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </nav>
+        </div>
     </header>
 
     {% if messages %}
