Removed home page background img added hr after heading

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,13 +2,13 @@
 {% load static %}
 
 {% block content %}
-<div class="container h-100">
+<div class="container h-100 hero-background">
     <div class="row h-100  d-flex justify-content-center">
         <div class="col-7 col-md-6 my-auto">
             <h1 class="display-4 logo-font text-black text-center">
                 A Modern Classic
             </h1>
-            <hr>
+            <hr class="hr-dashed-grey">
             <h3 class="bold text-center">
                 Bringing you the best
                 <br>
