--- a/templates/base.html
+++ b/templates/base.html
@@ -119,14 +119,22 @@
                 </ul>
             </div>
         </div>
-        <div class="row bg-black">
-            <nav class="navbar navbar-expand-lg navbar-light w-100">
+        <div class="row">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light w-100">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
                     aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+                {% include 'includes/mobile-top-header.html' %}
+                {% include 'includes/main-nav.html' %}
             </nav>
         </div>
+        <div class="row text-center" id="delivery-banner">
+            <div class="col bg-black text-white">
+                <h4 class="logo-font my-1">Free US delivery on orders over ${{ free_shipping_threshold }}!</h4>
+            </div>
+        </div>
+
     </header>
 
     {% if messages %}
