Completed structure of hero img and hero header on home page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,25 +2,34 @@
 {% load static %}
 
 {% block content %}
-<div class="container h-100 hero-background">
-    <div class="row h-100 d-flex justify-content-center">
-        <div class="col-7 col-md-6 my-auto">
-            <h1 class="display-4 logo-font text-black text-center">
-                A Modern Classic
-            </h1>
-            <hr class="hr-dashed-grey">
-            <h3 class="bold text-center">
-                Bringing you the best
-                <br>
-                of the past with a modern twist
-            </h3>
-            <div class="my-auto pt-4">
-                <h4 class="text-center">
-                    <a href="" class="shop-now-button btn rounded-0 text-uppercase py-3">Shop Now</a>
-                </h4>
+<div class="home-page-item h-100 hero-background">
+    <div class="container h-100"> <!--h-100-->
+        <div class="row h-100 d-flex justify-content-center"><!--h-100-->
+            <div class="col-7 col-md-6 my-auto">
+                <h1 class="display-4 logo-font text-black text-center">
+                    Modern Classics
+                </h1>
+                <hr class="hr-dashed-grey">
+                <h3 class="bold text-center">
+                    Bringing you the best
+                    <br>
+                    of the past with a modern twist
+                </h3>
+                <div class="my-auto pt-4">
+                    <h4 class="text-center">
+                        <a href="" class="shop-now-button btn rounded-0 text-uppercase py-3">Shop Now</a>
+                    </h4>
+                </div>
             </div>
         </div>
     </div>
+</div>
+<div class="home-page-item">
+    <h1>part 2 </h1>
+</div> 
+
+<div class="home-page-item">
+    <h1>part 3</h1>
 </div>
 
 {% endblock %}
