--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -25,11 +25,21 @@
     </div>
 </div>
 <div class="home-page-item">
-    <h1>part 2 </h1>
+    <div class="container h-100"> <!--h-100-->
+        <div class="row h-100 d-flex justify-content-center"><!--h-100-->
+            <div class="col-7 col-md-6 my-auto">
+                <h2 class="logo-font text-black text-center">New Realises</h2>
+                <div>
+                    <a href="https://sorgalla.com/jcarousel/examples/ajax/">Ajax carousel</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    
 </div> 
 
 <div class="home-page-item">
-    <h1>part 3</h1>
+    <h1>Instagram</h1>
 </div>
 
 {% endblock %}
