Fix hr class name to hr-heading-grey

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,7 +9,7 @@
                 <h1 class="display-4 logo-font text-black text-center">
                     Modern Classics
                 </h1>
-                <hr class="hr-dashed-grey">
+                <hr class="hr-heading-grey">
                 <h3 class="bold text-center">
                     Bringing you the best
                     <br>
