--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -17,7 +17,7 @@
                 </h3>
                 <div class="my-auto pt-4">
                     <h4 class="text-center">
-                        <a href="" class="shop-now-button btn rounded-0 text-uppercase py-3">Shop Now</a>
+                        <a href="{% url 'products' %}" class="shop-now-button btn rounded-0 text-uppercase py-3">Shop Now</a>
                     </h4>
                 </div>
             </div>
