JCarousel implementation fail - revert to previous commit

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 <div class="home-page-item h-100 hero-background">
-    <div class="container h-100"> <!--h-100-->
-        <div class="row h-100 d-flex justify-content-center"><!--h-100-->
+    <div class="container h-100">
+        <div class="row h-100 d-flex justify-content-center">
             <div class="col-7 col-md-6 my-auto">
                 <h1 class="display-4 logo-font text-black text-center">
                     Modern Classics
@@ -25,13 +25,12 @@
     </div>
 </div>
 <div class="home-page-item">
-    <div class="container h-100"> <!--h-100-->
-        <div class="row h-100 d-flex justify-content-center"><!--h-100-->
+    <div class="container h-100"> 
+        <div class="row h-100 d-flex justify-content-center">
             <div class="col-7 col-md-6 my-auto">
                 <h2 class="logo-font text-black text-center">New Realises</h2>
-                <div>
-                    <a href="https://sorgalla.com/jcarousel/examples/ajax/">Ajax carousel</a>
-                </div>
+                
+                
             </div>
         </div>
     </div>
