--- a/static/css/base.css
+++ b/static/css/base.css
@@ -80,7 +80,11 @@ body {
     width: 100%;
 }
 
-/* -------------------------------- Home page specific */
+/* ----------------- Home page - Owl Carousel */
+
+
+
+/* -------------------------------- Product page specific */
 .products-baner {
     margin-top: 155px;
     padding-top: 50px;
