--- a/static/css/base.css
+++ b/static/css/base.css
@@ -82,7 +82,13 @@ body {
 
 /* ----------------- Home page - Owl Carousel */
 
-
+.owl-carousel .nav-btn{
+      height: 47px;
+      position: absolute;
+      width: 26px;
+      cursor: pointer;
+      top: 100px !important;
+  }
 
 /* -------------------------------- Product page specific */
 .products-baner {
