Added search functionality

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="container-fluid products-baner">
-    <div class="row"><!--d-flex justify-content-center = previous extra code-->
+    <div class=""><!--d-flex justify-content-center || class="row" previous extra code-->
         <div class="col my-auto">
             <h2 class="logo-font text-center">Products</h2>
             <hr class="w-25 hr-heading-grey">
