--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -49,7 +49,7 @@
         <li class="nav-item">
             <div class="text-black nav-link d-block d-lg-none col-6">
                 <!-- Form element copied from Boutique Ado project -->
-                <form method="GET" action="">
+                <form method="GET" action="{% url 'products' %}">
                     <div class="input-group w-100">
                         <input class="form-control border border-black rounded-0" type="text" name="q"
                             placeholder="Search our site">
