--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -6,7 +6,6 @@
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
                 <a href="" class="dropdown-item">By Price</a>
-                <a href="" class="dropdown-item">By Rating</a>
                 <a href="" class="dropdown-item">By Category</a>
                 <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
             </div>
@@ -20,18 +19,20 @@
                 <a href="" class="dropdown-item">Dresses</a>
                 <a href="" class="dropdown-item">Blouses</a>
                 <a href="" class="dropdown-item">Skirts</a>
+                <a href="" class="dropdown-item">Jackets</a>
                 <a href="" class="dropdown-item">All Clothing</a>
             </div>
         </li>
 
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="homeware-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Homeware
+                Jewelry
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="homeware-link">
-                <a href="" class="dropdown-item">Bed &amp; Bath</a>
-                <a href="" class="dropdown-item">Kitchen &amp; Dining</a>
-                <a href="" class="dropdown-item">All Homeware</a>
+            <div class="dropdown-menu border-0" aria-labelledby="jewelry-link">
+                <a href="" class="dropdown-item">Necklaces</a>
+                <a href="" class="dropdown-item">Bracelets</a>
+                <a href="" class="dropdown-item">Earrings</a>
+                <a href="" class="dropdown-item">All Jewelry</a>
             </div>
         </li>
 
@@ -41,7 +42,6 @@
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="specials-link">
                 <a href="" class="dropdown-item">New Arrivals</a>
-                <a href="" class="dropdown-item">Deals</a>
                 <a href="" class="dropdown-item">Clearance</a>
                 <a href="" class="dropdown-item">All Specials</a>
             </div>
