--- a/static/css/base.css
+++ b/static/css/base.css
@@ -66,6 +66,12 @@ body {
 	border-top: 1px dashed #c5c1c1;
 }
 
+
+a.category-badge > span.badge:hover {
+    background: #212529 !important;
+    color: #fff !important;
+}
+
 /* -------------------------------- Home page specific */
 .home-page-item {
     margin-bottom: 50px;
