Added text shadowing to heading on home page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -7,11 +7,11 @@
     <div class="container h-100">
         <div class="row h-100 d-flex justify-content-center">
             <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font text-black text-center">
+                <h1 class="display-4 logo-font text-black text-center hero-heading">
                     Modern Classics
                 </h1>
-                <hr class="hr-heading-grey">
-                <h3 class="bold text-center">
+                <hr class="hr-heading-beige">
+                <h3 class="bold text-center hero-heading">
                     Bringing you the best
                     <br>
                     of the past with a modern twist
