--- a/static/css/base.css
+++ b/static/css/base.css
@@ -75,6 +75,21 @@ a.category-badge > span.badge:hover {
     color: #fff !important;
 }
 
+.btt-button {
+    color: #fff;
+    background-color: #000;
+    height:52px;
+    width: 42px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+}
+
+.btt-link {
+    text-decoration: none;
+    cursor: pointer;
+}
+
 /* -------------------------------- Home page specific */
 .home-page-item {
     margin-bottom: 50px;
