Added bag and likes context and delivery logic

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -2,27 +2,29 @@
 {% load static %}
 
 {% block content %}
-    <div class="container mb-2">
+    <div class="container-fluid products-baner "><!--container mb-2-->
         <div class="row">
-            <div class="col">
-                <hr class="hr-sm-grey">
+            <div class="col my-auto">
+                <hr class="w-25 hr-heading-beige">
                 <h2 class="logo-font text-center">Your Bag</h2>
-                <hr class="hr-sm-grey">
+                <hr class="w-25 hr-heading-beige">
             </div>
         </div>
-        <div class="row">
-            <div class="col">
-                {% if bag_items %}
-                    <div class="table-responsive rounded"></div>
-                {% else %}
-                    <p class="lead mb-5">Your bag is empty</p>
-                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
-                        <span class="icon">
-                            <i class="fas fa-chevron-left"></i>
-                        </span>
-                        <span class="text-uppercase">Keep Shopping</span>
-                    </a>
-                {% endif %}
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    {% if bag_items %}
+                        <div class="table-responsive rounded"></div>
+                    {% else %}
+                        <p class="lead mb-5">Your bag is empty</p>
+                        <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg border border-black">
+                            <span class="icon">
+                                <i class="fas fa-chevron-left"></i>
+                            </span>
+                            <span class="text-uppercase">Keep Shopping</span>
+                        </a>
+                    {% endif %}
+                </div>
             </div>
         </div>
     </div>
