--- a/templates/base.html
+++ b/templates/base.html
@@ -140,7 +140,7 @@
         </div>
         <div class="row text-center" id="delivery-banner">
             <div class="col bg-black text-white">
-                <h4 class="logo-font my-1">Free US delivery on orders over ${{ free_shipping_threshold }}!</h4>
+                <h4 class="logo-font my-1">Free US delivery on orders over ${{ free_delivery_threshold }}!</h4>
             </div>
         </div>
 
