--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -29,6 +29,51 @@
                         </p>
                     {% endif %}
                     <p class="mt-3">{{ product.description }}</p>
+                    <form class="form" action="{% url 'add_to_likes' product.id %}" method="POST">
+                        {% csrf_token %}
+                        <div class="form-row">
+                            <div class="col-12">
+                                <button type="submit" class="btn btn-black btn-outline-black rounded-0 text-uppercase mt-1">
+                                    Add to Likes
+                                    <span class="icon">
+                                        <i class="fas fa-lg fa-heart text-danger"></i>
+                                    </span>
+                                </button>
+                            </div>
+                        <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                        </div>
+                    </form>
+                    <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
+                        {% csrf_token %}
+                        <div class="form-row">
+                            <div class="col-12">
+                                <p class="mt-3"><strong>Quantity:</strong></p>
+                                <div class="form-group w-50">
+                                    <div class="input-group">
+                                        <input class="form-control qty_input" type="number" name="quantity" 
+                                            value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-12">
+                                <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
+                                    <span class="icon">
+                                        <i class="fas fa-chevron-left"></i>
+                                    </span>
+                                    <span class="text-uppercase">Keep Shopping</span>
+                                </a>
+                                <button type="submit" class="btn btn-black btn-outline-black rounded-0 text-uppercase mt-5">
+                                    Add to Bag 
+                                    <span class="icon">
+                                        <i class="fas fa-shopping-bag"></i>
+                                    </span>
+                                </button>
+                                
+                            </div>
+                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                        </div>
+                    </form>
                 </div>
         </div>
     </div>
@@ -36,3 +81,11 @@
 
 {% endblock %}
 
+<!--
+    <a href="" class="btn btn-black btn btn-outline-black rounded-0 mt-5">
+                                    <span class="icon text-danger">
+                                        <i class="fas fa-lg fa-heart"></i>
+                                    </span>
+                                    
+                                </a>
+-->
