Fix likes heart icon color to red

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -18,7 +18,9 @@
                 </h3>
                 <div class="my-auto pt-4">
                     <h4 class="text-center">
-                        <a href="{% url 'products' %}" class="shop-now-button btn rounded-0 text-uppercase py-3">Shop Now</a>
+                        <a href="{% url 'products' %}" class="shop-now-button btn-outline-black btn rounded-0 text-uppercase py-3">
+                            Shop Now!
+                        </a>
                     </h4>
                 </div>
             </div>
