--- a/templates/base.html
+++ b/templates/base.html
@@ -103,7 +103,7 @@
                         <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
                             href="{% url 'view_likes' %}">
                             <div class="text-center">
-                                <div><i class="fas fa-heart fa-lg"></i></div>
+                                <div><i class="fas fa-heart fa-lg text-danger"></i></div>
                                 <p class="my-0">
                                     Likes
                                 </p>
