--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -23,7 +23,7 @@
     <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" 
         href="{% url 'view_likes' %}">
         <div class="text-center">
-            <div><i class="fas fa-heart fa-lg"></i></div>
+            <div><i class="fas fa-heart fa-lg text-danger"></i></div>
             <p class="my-0">
                 Likes
             </p>
