--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -29,11 +29,12 @@
                         </p>
                     {% endif %}
                     <p class="mt-3">{{ product.description }}</p>
-                    <form class="form" action="{% url 'add_to_likes' product.id %}" method="POST">
+                    <form class="form" action="{% url 'add_to_like' product.id %}" method="POST">
                         {% csrf_token %}
                         <div class="form-row">
                             <div class="col-12">
-                                <button type="submit" class="btn btn-black btn-outline-black rounded-0 text-uppercase mt-1">
+                                <button type="submit" class="btn btn-black btn-outline-black rounded-0 text-uppercase mt-1"
+                                    name="like_button" data-item_id="{{ product.id }}" value="1">
                                     Add to Likes
                                     <span class="icon">
                                         <i class="fas fa-lg fa-heart text-danger"></i>
@@ -69,7 +70,6 @@
                                         <i class="fas fa-shopping-bag"></i>
                                     </span>
                                 </button>
-                                
                             </div>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         </div>
@@ -80,12 +80,3 @@
 </div>
 
 {% endblock %}
-
-<!--
-    <a href="" class="btn btn-black btn btn-outline-black rounded-0 mt-5">
-                                    <span class="icon text-danger">
-                                        <i class="fas fa-lg fa-heart"></i>
-                                    </span>
-                                    
-                                </a>
--->
