--- a/templates/base.html
+++ b/templates/base.html
@@ -100,8 +100,8 @@
                         </div>
                     </li>
                     <li class="list-inline-item">
-                        <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
-                            href="{% url 'view_likes' %}">
+                        <a class="{% if like_items %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
+                            href="{% url 'view_like' %}">
                             <div class="text-center">
                                 <div><i class="fas fa-heart fa-lg text-danger"></i></div>
                                 <p class="my-0">
