--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -32,6 +32,12 @@
                     <form class="form" action="{% url 'add_to_like' product.id %}" method="POST">
                         {% csrf_token %}
                         <div class="form-row">
+                            <div class="form-group">
+                                    <div class="input-group">
+                                        <input class="form-control qty_input" type="hidden" name="quantity" 
+                                            value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_like_{{ product.id }}">
+                                    </div>
+                                </div>
                             <div class="col-12">
                                 <button type="submit" class="btn btn-black btn-outline-black rounded-0 text-uppercase mt-1"
                                     name="like_button" data-item_id="{{ product.id }}" value="1">
