--- a/like/templates/like/like.html
+++ b/like/templates/like/like.html
@@ -15,7 +15,52 @@
                 <div class="col">
                     {% if like_items %}
                         <div class="table-responsive rounded">
-                            {{ like_items }}
+                            <div class="table-responsive rounded">
+                            <table class="table table-sm table-borderless">
+                                <thead class="bg-black text-light border-black">
+                                    <tr>
+                                        <th scope="col">Product Info</th>
+                                        <th scope="col"></th>
+                                        <th scope="col">Price</th>
+                                        <th scope="col">Qty</th>
+                                    </tr>
+                                </thead>
+
+                                {% for item in bag_items %}
+                                    <tr>
+                                        <td class="p-3 w-5">
+                                            <img class="img-fluid rounded" src="{{ item.product.image.url }}">
+                                        </td>
+                                        <td class="p-3">
+                                            <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+                                            <p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
+                                        </td>
+                                        <td class="p-3">
+                                            <p class="my-0">${{ item.product.price }}</p>
+                                        </td>
+                                        <td class="p-3 w-25">
+                                            <p class="my-0"><button>{{ item.product.description }}</button></p>
+                                        </td>
+                                    </tr>
+                                {% endfor %}
+                                <tr>
+                                    <td colspan="5" class="text-right">
+                                        <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
+                                            <span class="icon">
+                                                <i class="fas fa-chevron-left"></i>
+                                            </span>
+                                            <span class="text-uppercase">Keep Shopping</span>
+                                        </a>
+                                        <a href="{% url 'view_bag' %}" class="btn btn-black rounded-0 btn-lg">
+                                            <span class="text-uppercase">Go to Bag</span>
+                                            <span class="icon">
+                                                <i class="fas fa-shopping-bag"></i>
+                                            </span>
+                                        </a>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
                         </div>
                     {% else %}
                         <p class="lead mb-5">You have not liked any items</p>
