--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -40,7 +40,7 @@
                                             <p class="my-0">${{ item.product.price }}</p>
                                         </td>
                                         <td class="p-3 w-25">
-                                            <p class="my-0">{{ item.quantity }}</p>
+                                            <p class="my-0">{{ item.item_data }}</p>
                                         </td>
                                         <td class="p-3">
                                             <p class="my-0">${{ item.product.price }}</p>
