Added adjust and remove item functionality to bag

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -39,7 +39,7 @@
                                             <p class="my-0">${{ item.product.price }}</p>
                                         </td>
                                         <td class="p-3 w-25">
-                                            <form class="from update-form" method="POST" action="">
+                                            <form class="from update-form" method="POST" action="{% url 'adjust_bag' item.item_id %}">
                                                 {% csrf_token %}
                                                 <div class="form-group">
                                                     <div class="input-group">
@@ -69,7 +69,8 @@
                                                 </div>
                                             </form>
                                             <a class="update-link text-info" ><small>Update</small></a>
-                                            <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}" data-size="{{ item.size }}"><small>Remove</small></a>
+                                            <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}" 
+                                                data-product_size="{{ item.size }}"><small>Remove</small></a>
                                         </td>
                                         <td class="p-3">
                                             <p class="my-0">${{ item.product.price }}</p>
@@ -134,11 +135,11 @@
 
         // Remove item and reload on click
         $('.remove-item').click(function(e) {
-            var csrf_token = "{{ csrf_token }}";
+            var csrfToken = "{{ csrf_token }}";
             var itemId = $(this).attr('id').split('remove_')[1];
-            var size = $(this).data('size');
-            var url = `/bag/remove/${itemId}`;
-            var data = {'{csrfmiddlewaretoken}': csrf_token, 'size': size};
+            var size = $(this).data('product_size');
+            var url = `/bag/remove/${itemId}/`;
+            var data = {'csrfmiddlewaretoken': csrfToken, 'product_size': size};
 
             $.post(url, data)
              .done(function() {
