Added message levels f0or toast messages

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -105,6 +105,23 @@ a.category-badge > span.badge:hover {
     cursor: pointer;
 }
 
+/* -------------------------------- Bootstrap toasts */
+
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 99999999;
+}
+
+.custom-toast {
+    overflow: visible;
+}
+
+.toast-capper {
+    height: 2px;
+}
+
 /* -------------------------------- Home page specific */
 .home-page-item {
     margin-bottom: 50px;
