Tried but failed to get total and product_count to show up in bag preview

--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -18,7 +18,7 @@ https://github.com/ckz8780/boutique_ado_v1/blob/d2c3833acdc59434e38f2ba03b4b5135
             </div>
         </div>
         {% if grand_total %}
-            <p class="logo-font bg-white text-black py-1">Your Bag ( {{ items.product_count }} )</p>
+            <p class="logo-font bg-white text-black py-1">Your Bag ( {{ product_count }} )</p>
             <div class="bag-notification-wrapper">
                 {% for item in bag_items %}
                     <div class="row">
