--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -37,7 +37,7 @@ https://github.com/ckz8780/boutique_ado_v1/blob/d2c3833acdc59434e38f2ba03b4b5135
                 <div class="col">
                     <p class="mt-3 mb-1 text-black">
                         <strong>Total{% if free_delivery_delta > 0 %}(Exc. delivery){% endif %}: 
-                        <span class="float-right">${{ grand_total|floatformat:2 }}</span></strong>
+                        <span class="float-right">${{ total|floatformat:2 }}</span></strong>
                     </p>
                     {% if free_delivery_delta > 0 %}
                         <p class="mb-0 p-2 bg-warning shadow-sm text-black text-center">
